--- a/src/Assignment-1/assignment1.html
+++ b/src/Assignment-1/assignment1.html
@@ -13,6 +13,34 @@
 
 	<!-- This is just a comment. Ignore this line.-->
 	<!-- Start your code from here -->
+	<div class="row">
+		<div class="col"> 
+			<ul>
+				<li>List Item 1</li >
+				<li>List Item 2</li>
+				<li>List Item 3
+					<ul>
+						<li>List Item 3.1</li>
+						<li>List Item 3.2</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div class="col">
+			<img width="570" height="300" src="https://images.unsplash.com/photo-1623074716850-ba4c90d49f2f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDE3fGhTUDZKeDh3NFo0fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60 alt="unsplash">
+		</div>
+	</div>
+	
+
+<div class="row">
+		<div class="col">
+			<img width="570" height="300" src="https://images.unsplash.com/photo-1623074716850-ba4c90d49f2f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDE3fGhTUDZKeDh3NFo0fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+		</div>
+		<div class="col">
+			<h1>The Largest community of photo enthusiasts</h1>
+		</div>
+	</div>
+
 	
 	
 	<!-- End your code -->
